--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon"> <!-- Cambié a ruta relativa -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/src/App.css" rel="stylesheet">
+    <link href="./src/App.css" rel="stylesheet"> <!-- Cambié a ruta relativa -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -15,6 +15,6 @@
   </head>
   <body class="font-[Inter]">
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script> <!-- Cambié a ruta relativa -->
   </body>
 </html>
